<resources>
    <string name="app_name">Meet Finance</string>
    <string name="name_of_the_company">Name of the company</string>
    <string name="search">Search</string>
    <string name="Companies_List">Companies List</string>
    <string name="todo" />
    <string name="description" />
    <string name="example_application" />
    <string name="search2">Companies List</string>
    <string name="Menu">Menu</string>
    <string name="home">Home</string>
    <string name="quit">Quit</string>
    <string name="other">Other</string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="price">price</string>
    <string name="exchange">exchange</string>
    <string name="company_s_details">COMPANY</string>
    <string name="NAME">NAME:</string>
    <string name="PRICE">PRICE:</string>
    <string name="EXCHANGE">EXCHANGE:</string>
    <string name="SYMBOL">SYMBOL:</string>
    <string name="companyName">company Name</string>
    <string name="industry">industry</string>
    <string name="companyDescription">companyDesc</string>
    <string name="sector">sector</string>
    <string name="Search">Search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="BULL">BULL</string>
    <string name="FInanceHUB">FinanceHUB</string>
    <string name="company_name">Company_Name</string>
</resources>
