<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".FirstActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="225dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/image1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <!-- espace texte pour la recherche -->
        <EditText
            android:id="@+id/et_company"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name_of_the_company"
            android:hint="@string/name_of_the_company"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="#C8C5C5" />

        <!-- barre de progression chargement -->
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/search" />

    <Button
        android:id="@+id/buttonSend2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/search2" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="165dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/image5" />


    <ListView
        android:id="@+id/recentResearch"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"></ListView>

</LinearLayout>